<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.cmhteixeira</groupId>
    <artifactId>concurrency-exercices</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>
  <artifactId>exercises</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <name>${project.artifactId}</name>
  <description>BitTorrent client</description>
  <inceptionYear>2018</inceptionYear>
  <licenses>
    <license>
      <name>My License</name>
      <url>http://....</url>
      <distribution>repo</distribution>
    </license>
  </licenses>


  <dependencies>
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
    </dependency>
    <dependency>
      <groupId>io.circe</groupId>
      <artifactId>circe-core_${scala.compat.version}</artifactId>
    </dependency>
    <dependency>
      <groupId>io.circe</groupId>
      <artifactId>circe-parser_${scala.compat.version}</artifactId>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
    </dependency>
    <dependency> <!--TODO: Only to print hex-string representation of sha-1 output. Consider another way-->
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
    </dependency>
    <dependency>
      <groupId>org.scodec</groupId>
      <artifactId>scodec-bits_${scala.compat.version}</artifactId>
    </dependency>
    <dependency>
      <groupId>com.typesafe.akka</groupId>
      <artifactId>akka-actor_${scala.compat.version}</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
    </dependency>
    <dependency>
      <groupId>org.javatuples</groupId>
      <artifactId>javatuples</artifactId>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.scalatest</groupId>
      <artifactId>scalatest_${scala.compat.version}</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>



  <build>
<!--    <sourceDirectory>src/main/scala</sourceDirectory>-->
<!--    <testSourceDirectory>src/test/scala</testSourceDirectory>-->
    <plugins>

      <plugin>
        <!-- see http://davidb.github.com/scala-maven-plugin -->
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>process-resources</phase>
            <goals>
              <goal>compile</goal>
              <!--              <goal>testCompile</goal>-->
            </goals>
          </execution>
        </executions>
        <configuration>
          <javacArgs>
            <javacArg>--enable-preview</javacArg>
          </javacArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
              <source>17</source>
              <target>17</target>
              <compilerArgs>--enable-preview</compilerArgs>
          </configuration>
          <!--        <executions>-->
<!--          <execution>-->
<!--            <id>default-compile</id>-->
<!--            <phase>none</phase>-->
<!--          </execution>-->
<!--        </executions>-->

      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
<!--        <version>2.21.0</version>-->
        <configuration>
          <!-- Tests will be run with scalatest-maven-plugin instead -->
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.scalatest</groupId>
        <artifactId>scalatest-maven-plugin</artifactId>
<!--        <version>2.0.0</version>-->
<!--        <configuration>-->
<!--          <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>-->
<!--          <junitxml>.</junitxml>-->
<!--          <filereports>TestSuiteReport.txt</filereports>-->
          <!-- Comma separated list of /JUnit test class names to execute -->
<!--          <jUnitClasses>samples.AppTest</jUnitClasses>-->
<!--        </configuration>-->
        <executions>
          <execution>
            <id>test</id>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
